[topic] edit publish and show

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <div>
         <acme-navbar creationDate="main.creationDate" />
     </div>
-    <div ui-view></div>
+    <div class="container" ui-view></div>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
