[topic] new fix

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
     <div>
         <acme-navbar creationDate="main.creationDate" />
     </div>
-    <div class="container" ui-view></div>
-
+    <div class="container fixed_top" ui-view></div>
+    
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
